tests/iperf/isilon_10G/tcp_100/outgoing_results.txt
zephram-1# iperf -s
------------------------------------------------------------
Server listening on TCP port 5001
TCP window size:   128 KByte (default)
------------------------------------------------------------
[  4] local 7.7.7.2 port 5001 connected with 7.7.7.3 port 54069
[ ID] Interval       Transfer     Bandwidth
[  4]  0.0-60.0 sec  65.5 GBytes  9.38 Gbits/sec





────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-1# bash cpu_usage.sh iperf
^C
11.0 13.9 15.8 16.3 18.4 18.9 20.9 21.2 23.7 24.1 27.0 27.1 29.4 29.1 31.3 30.1 32.6 31.3 33.6 33.0 35.3 34.2 36.6 35.5 38.2 37.3 39.9 38.4 41.0 39.4 41.9 40.9 43.3 41.6 43.9 42.0 44.5 42.6 44.8 42.8 45.0 42.8 45.2 43.4 46.0 43.9 46.5 44.2 46.8 44.6 46.8 44.4 46.8 44.7 47.0 49.0 47.1 49.5 47.0 44.9 47.0 45.2 47.3 49.5 47.4 49.8 47.8 50.2 48.1 50.1 48.0 50.2 48.2 50.7 48.8 51.1 49.0 51.4 49.1 51.1 48.6 50.5 48.6 51.2 49.6 52.1 49.6 52.1 49.8 51.7 49.1 51.7 49.3 51.7 49.3 51.5 48.9 51.5 49.1 51.2 48.7 51.0 48.5 51.6 49.4 51.9 49.2 51.7 49.3 51.8 49.4
average: 42.7748
zephram-1# 







────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# ./ipfwd 1 1.0          
[ipfwd] starting
current:  6.537%, error:  6.5%, probability:  1.000%
current:  6.012%, error:  7.1%, probability:  1.000%
current:  6.531%, error:  0.5%, probability:  1.000%
current:  9.009%, error:  2.5%, probability:  1.000%
current:  11.285%, error:  2.3%, probability:  1.000%
current:  10.376%, error:  0.9%, probability:  1.000%
current:  11.542%, error:  1.2%, probability:  1.000%
current:  12.616%, error:  1.1%, probability:  1.000%
current:  12.604%, error:  0.0%, probability:  1.000%
current:  13.593%, error:  1.0%, probability:  1.000%
current:  14.502%, error:  0.9%, probability:  1.000%
current:  13.336%, error:  1.2%, probability:  1.000%
current:  13.269%, error:  0.1%, probability:  1.000%
current:  14.203%, error:  0.9%, probability:  1.000%
^C
zephram-2# 
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# iperf -c 7.7.7.2 -t 60
------------------------------------------------------------
Client connecting to 7.7.7.2, TCP port 5001
TCP window size:   129 KByte (default)
------------------------------------------------------------
[  3] local 7.7.7.3 port 54069 connected with 7.7.7.2 port 5001
[ ID] Interval       Transfer     Bandwidth
[  3]  0.0-60.0 sec  65.5 GBytes  9.38 Gbits/sec
zephram-2# 














────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# bash cpu_usage.sh iperf
^C
10.5 14.0 15.4 18.4 19.7 22.8 23.5 26.9 27.1 30.1 30.1 33.2 33.5 36.3 35.9 39.8 39.4 42.9 41.9 45.2 44.2 47.2 45.6 49.1 47.7 50.8 49.1 52.1 50.3 53.5 51.5 54.6 52.8 56.1 53.8 56.7 54.3 57.3 55.0 57.6 55.3 58.2 55.8 59.0 56.8 60.0 57.4 60.9 58.1 61.3 58.6 61.5 64.7 61.5 59.0 62.2 64.9 61.7 64.4 61.4 64.4 61.7 64.8 62.1 65.1 62.2 65.3 62.3 65.5 62.2 65.2 62.2 65.6 62.6 65.5 62.1 65.5 62.2 64.6 61.9 64.4 60.4 63.0 59.6 62.4 65.3 62.4 65.1 62.3 65.6 62.5 65.5 62.5 65.4 62.9 66.2 63.2 66.2 63.1 66.2 63.2 66.5 63.4 66.2 62.8 65.6 62.5 65.7 62.7 66.1 63.1 66.3
average: 54.9098
zephram-2# 

